added cart item model
